Fixed overflow issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,8 @@ body {
 
 #root {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     margin: 0;
     top: 0;
     left: 0;
@@ -16,6 +17,7 @@ body {
     display: flex;
     justify-content: flex-start;
     height: 100%;
+    min-height: 100vh;
 }
 .app-list-container {
     display: flex;
